--- a/src/app/componentes/About/about/about.component.html
+++ b/src/app/componentes/About/about/about.component.html
@@ -7,8 +7,8 @@
   
         <!-- About Section Content-->
         <div class="row">
-            <div class="col-lg-4 ms-auto">  <h2>Misión</h2> <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia rem veritatis maiores repellat corrupti illum voluptatem, unde similique provident aliquam, officiis atque ut blanditiis. Odit dicta exercitationem nostrum consectetur hic.</p></div>
-            <div class="col-lg-4 me-auto"> <h2>Visión</h2><p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe odio accusantium nulla nostrum rerum eum nobis tenetur sequi iste quaerat, nesciunt, molestiae magnam dolorum distinctio iure vero delectus fugit beatae!</p></div>
+            <div class="col-lg-4 ms-auto">  <h2>Misión</h2> <p class="lead">Llevarle a tus invitados la mejor de las experiencias a través de nuetra gran variedad de snacks, haciendo de tu evento algo único, divertido y de gran calidad.</div>
+            <div class="col-lg-4 me-auto"> <h2>Visión</h2><p class="lead">En los puestecitos trabajamos día a día en la mejora e inovación de nuestros productos para llegar a seguir siendo una empresa líder. </p></div>
         </div>
     </div>
   </section>
